dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_drop_in_flow_init_sent_sends_flow_init_fin.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent FlowInit with early data stream_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=FlowInitSent next_offset=5 inflight_bytes=5 remote_max_data=0
0:00:00.000000000 [main] DEBUG Sent FlowInitFin stream_id=42 sender_idx=0 offset=5
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
