dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_empty_fin_flow_init.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:819:21
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:822:25
0:00:00.000000000 [main] DEBUG Sent FlowInit with early data stream_id=42 bytes_read=0 is_fin=true
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=FinSent next_offset=0 inflight_bytes=0 remote_max_data=0
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
