dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_fin_write_then_drop_emits_no_extra_packet.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:819:21
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:822:25
0:00:00.000000000 [main] DEBUG Sent FlowInit with early data stream_id=42 bytes_read=2 is_fin=true
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=FinSent next_offset=2 inflight_bytes=2 remote_max_data=0
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
