dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_panic_drop_during_flow_init_sent_sends_flow_init_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:936:21
0:00:00.000000000 [main] DEBUG Sent FlowInit with early data stream_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=FlowInitSent next_offset=5 inflight_bytes=5 remote_max_data=0
0:00:00.000000000 [main] DEBUG Sent FlowInitReset stream_id=42 sender_idx=0 attempt_id=0 error_code=5
0:00:00.000000000 [main] DEBUG Writer dropped during panic - sent FlowReset and cancelled transmissions stream_id=42
